--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/BlazorChat.API
+/.vs
+bin
+obj
