--- a/BlazorChat.API/BlazorChat.API.csproj
+++ b/BlazorChat.API/BlazorChat.API.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlasorChat.Models\BlasorChat.Models.csproj" />
+    <ProjectReference Include="..\BlazorChat.Client\BlazorChat.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
