--- a/BlazorChat.Client/BlazorChat.Client.csproj
+++ b/BlazorChat.Client/BlazorChat.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -14,12 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlasorChat.Models\BlasorChat.Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="app.yaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
